--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ canvas {
 
 #distance-display {
     position: absolute;
-    top: 10px;
-    left: 20px;
+    top: 80px;
+    left: 50px;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.5);
     color: #ffffff;
@@ -20,8 +20,8 @@ canvas {
 }
 #travel-time {
     position: absolute;
-    top: 70px;
-    left: 20px;
+    top: 150px;
+    left: 50px;
     font-size: 20px;
     color: black;
     background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
@@ -31,10 +31,10 @@ canvas {
 }
 #controls {
     position: absolute;
-    bottom: 65px;
-    left: 270px;
+    bottom: 170px;
+    left: 50px;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 10px;
 }
 
@@ -59,13 +59,14 @@ button:active {
 
 #info-display {
     position: absolute;
-    bottom: 20px;
-    left: 40px;
+    bottom: 50px;
+    left: 50px;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    width: 200px; /* Adjust width to your liking */
+    display: flex;
+    width: 600px; /* Adjust width to your liking */
 }
 
 #info-display div {
